fixed spacing

--- a/starwars/src/index.css
+++ b/starwars/src/index.css
@@ -11,7 +11,8 @@ body {
   width:auto;
 }
 .character-container{
-  display:flex;
- 
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 
 }
